# atelier-legion-demo

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  rustfmt.toml
assets/: custom_asset.ron  demo_level.prefab  ext_prefab.prefab  position_component.ron  prefab_test.prefab  prefab_test.ron
demo/: Cargo.toml
demo/src/: app.rs  asset_manager.rs  asset_storage.rs  clone_merge.rs  component_diffs.rs  components.rs  custom_asset.rs  daemon.rs  game.rs  inspect.rs  legion_serde_support.rs  lib.rs  main.rs  math.rs  physics.rs  prefab.rs  prefab_cooking.rs  prefab_importer.rs  selection.rs  spawn.rs  temp_test.rs  transactions.rs
demo/src/components/: draw.rs  mod.rs  physics.rs  transform.rs
demo/src/pipeline/image/: importers.rs
demo/src/pipeline/prefab/: assets.rs  importers.rs
demo/src/resources/: app_control.rs  asset.rs  camera.rs  canvas_draw_context.rs  debug_draw.rs  editor_draw.rs  editor_selection.rs  editor_state.rs  fps_text.rs  imgui.rs  input.rs  mod.rs  physics.rs  time.rs  viewport.rs
demo/src/resources/editor_resources/: editor_draw.rs  editor_selection.rs  editor_state.rs  mod.rs
demo/src/systems/: app_control.rs  app_control_systems.rs  asset_manager.rs  draw.rs  draw_systems.rs  editor_systems.rs  fps_text.rs  fps_text_systems.rs  input_systems.rs  mod.rs  physics.rs  physics_systems.rs  time_systems.rs
demo/src/systems/editor_systems/: entity_list_window.rs  gizmos.rs  inspector_window.rs  main_menu.rs  mod.rs  selection.rs
format/: Cargo.toml
format/examples/: test.rs
format/src/: lib.rs
legion-prefab/: Cargo.toml
legion-prefab/examples/: registration.rs
legion-prefab/src/: cooked_prefab.rs  lib.rs  prefab.rs  prefab_serde.rs  registration.rs  world_serde.rs
prefab-format/: Cargo.toml
prefab-format/examples/: legion.rs  prefab_sample.rs.inc  test.rs
prefab-format/src/: deserialize.rs  lib.rs  serialize.rs
src/: game.rs  lib.rs  main.rs  physics.rs  storage.rs
