[package]
name = "atelier-legion-demo"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skulpin = "0.3"
log="0.4"
env_logger = "0.6"

legion = "0.2"

nalgebra = "0.18"
ncollide2d = "0.20"
nphysics2d = "0.12"