[package]
name = "atelier-legion-demo"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skulpin = { git = "https://github.com/aclysma/skulpin.git", branch = "imgui_support", features = ["with_imgui"] }
log="0.4"
env_logger = "0.6"

#atelier-core = { version = "0.1", git = "https://github.com/amethyst/atelier-assets.git" }
#atelier-daemon = { version = "0.1", git = "https://github.com/amethyst/atelier-assets.git" }
#atelier-importer = { version = "0.1", git = "https://github.com/amethyst/atelier-assets.git" }
#atelier-loader = { version = "0.1", git = "https://github.com/amethyst/atelier-assets.git" }

atelier-core = { path = "../atelier-assets/core" }
atelier-daemon = { path = "../atelier-assets/daemon" }
atelier-importer = { path = "../atelier-assets/importer" }
atelier-loader = { path = "../atelier-assets/loader" }

legion = { path = "../legion", default-features = false, features = ["serde-1"] }

nalgebra = { version = "0.18", features = [ "serde-serialize" ] }
ncollide2d = "0.20"
nphysics2d = "0.12"

structopt = "0.3"
serde = "1"
uuid = "0.8"
type-uuid = "0.1"
image2 = { version = "0.11", features = [ "ser" ] }
inventory = "0.1"
bincode = "1.2"
mopa = "0.2"
itertools = "0.8"

serde-diff = { git = "https://github.com/kabergstrom/serde-diff.git" }
legion-prefab = { path = "../legion-prefab" }
prefab-format = { path = "../prefab-format" }

ron = "0.4"
erased-serde = "0.3"
serde-value = "0.6"
