[package]
name = "atelier-legion-demo"
version = "0.1.0"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skulpin = { git = "https://github.com/aclysma/skulpin.git", branch = "imgui_support_winit_21", features = ["with_imgui"] }
imgui-inspect-derive = { git = "https://github.com/aclysma/imgui-inspect.git", branch="imgui_support_winit_21" }
imgui-inspect = { git = "https://github.com/aclysma/imgui-inspect.git", branch="imgui_support_winit_21" }

log="0.4"
env_logger = "0.6"

#atelier-core = { version = "0.1", git = "https://github.com/amethyst/atelier-assets.git" }
#atelier-daemon = { version = "0.1", git = "https://github.com/amethyst/atelier-assets.git" }
#atelier-importer = { version = "0.1", git = "https://github.com/amethyst/atelier-assets.git" }
#atelier-loader = { version = "0.1", git = "https://github.com/amethyst/atelier-assets.git" }

atelier-core = { path = "../atelier-assets/core" }
atelier-daemon = { path = "../atelier-assets/daemon" }
atelier-importer = { path = "../atelier-assets/importer" }
atelier-loader = { path = "../atelier-assets/loader" }

crossbeam-channel = "0.3"

legion = { git = "https://github.com/kabergstrom/legion", branch = "clone_move", default-features = false, features = ["serialize"] }

nalgebra = { version = "0.18", features = [ "serde-serialize" ] }
nalgebra-glm = "0.4"
ncollide2d = "0.20"
nphysics2d = "0.12"
glam = { version = "0.8.5", features = ["serde"] }

structopt = "0.3"
serde = "1"
uuid = "0.8"
type-uuid = "0.1"
image2 = { version = "0.11", features = [ "ser" ] }
inventory = "0.1"
#bincode = "1.2"
bincode = { git="https://github.com/aclysma/bincode.git", branch="new-trait-bound" }
mopa = "0.2"
itertools = "0.8"

serde-diff = { git = "https://github.com/amethyst/serde-diff.git" }
legion-prefab = { path = "../prefab/legion-prefab" }
prefab-format = { path = "../prefab/prefab-format" }

ron = "0.5"
erased-serde = "0.3"
