[package]
name = "legion-prefab"
version = "0.1.0"
authors = ["Karl Bergström <karl.anton.bergstrom@gmail.com>"]
edition = "2018"

[dependencies]
prefab-format = { path = "../prefab-format" }
serde = { version = "1", default-features = false, features = [ "derive" ] }
erased-serde = "0.3"
#legion = { version = "0.2.1", default-features = false, features = ["serde-1"] }
legion = { path = "../legion", default-features = false, features = ["serde-1"] }
inventory = "0.1"
type-uuid = "0.1"
uuid = { version = "0.8", default-features = false, features = [ "v4" ] }
serde-diff = { git = "https://github.com/kabergstrom/serde-diff.git" }
serde-value = "0.6"
bincode = "1.2"

[dev-dependencies]
ron = "0.5"