[package]
name = "prefab-format"
version = "0.1.0"
authors = ["Karl Bergström <karl.anton.bergstrom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-diff = { git = "https://github.com/kabergstrom/serde-diff.git" }
type-uuid = "0.1"
serde = { version = "1.0", default-features = false, features = [ "derive" ] }
uuid = { version = "0.8", features = [ "serde" ] }


[dev-dependencies]
ron = "0.5"
#legion = { version = "0.2.1", default-features = false, features = ["serde-1"] }
legion = { git = "https://github.com/kabergstrom/legion.git", branch = "serde", default-features = false, features = ["serde-1"] }
linkme = "0.1"
erased-serde = "0.3"
atelier-core = { path = "../atelier-assets/core" }